--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
@@ -465,6 +465,14 @@
 	border: 1px solid #a29090;
 	border-radius: 4px;
 }
+
+.ast-field-settings-modal .astra-popover-color {
+    margin-right: 0px;
+	border: 1px solid #dedede;
+}
+.ast-field-settings-modal .astra-popover-color .components-tab-panel__tabs {
+	padding: 8px;
+}
 .components-color-picker__saturation-black {
 	border-radius: 4px 4px 0 0;
 }
@@ -1048,6 +1056,14 @@
 	background-color: #ffffff;
 	border: 1px solid #a29090;
 	border-radius: 4px;
+}
+
+.ast-field-settings-modal .astra-popover-color {
+    margin-right: 0px;
+	border: 1px solid #dedede;
+}
+.ast-field-settings-modal .astra-popover-color .components-tab-panel__tabs {
+	padding: 8px;
 }
 .components-color-picker__saturation-black {
 	border-radius: 4px 4px 0 0;
@@ -2162,7 +2178,7 @@ input[type="text"].select2-search__field {
   width: 50px;
   margin: 0;
   display: none;
-  padding: .1em;
+  padding: 0 8px 0 24px;
   margin-right: 2px;
   float: none;
 }
@@ -3368,10 +3384,12 @@ input[type="text"].select2-search__field {
 .customize-control-ast-responsive .input-wrapper .ast-responsive-select {
   width: 50px;
   margin: 0;
-  display: none;
-  padding: .1em;
   margin-right: 2px;
+  padding: 0 8px 0 24px;
+  font-size: 13px;
+  text-transform: uppercase;
   float: none;
+  display: none;
 }
 
 .customize-control-ast-responsive .input-wrapper .ast-responsive-input.active + .ast-responsive-select {
