--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls.css
@@ -465,6 +465,14 @@
 	border: 1px solid #a29090;
 	border-radius: 4px;
 }
+
+.ast-field-settings-modal .astra-popover-color {
+    margin-left: 0px;
+	border: 1px solid #dedede;
+}
+.ast-field-settings-modal .astra-popover-color .components-tab-panel__tabs {
+	padding: 8px;
+}
 .components-color-picker__saturation-black {
 	border-radius: 4px 4px 0 0;
 }
@@ -1577,10 +1585,12 @@ input[type="text"].select2-search__field {
 .customize-control-ast-responsive .input-wrapper .ast-responsive-select {
   width: 50px;
   margin: 0;
-  display: none;
-  padding: .1em;
   margin-left: 2px;
+  padding: 0 24px 0 8px;
+  font-size: 13px;
+  text-transform: uppercase;
   float: none;
+  display: none;
 }
 
 .customize-control-ast-responsive .input-wrapper .ast-responsive-input.active + .ast-responsive-select {
