--- a/inc/customizer/custom-controls/assets/css/unminified/responsive-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/responsive-rtl.css
@@ -50,10 +50,12 @@
 .customize-control-ast-responsive .input-wrapper .ast-responsive-select {
   width: 50px;
   margin: 0;
-  display: none;
-  padding: .1em;
   margin-right: 2px;
+  padding: 0 8px 0 24px;
+  font-size: 13px;
+  text-transform: uppercase;
   float: none;
+  display: none;
 }
 
 .customize-control-ast-responsive .input-wrapper .ast-responsive-input.active + .ast-responsive-select {
