--- a/inc/customizer/custom-controls/responsive/responsive.scss
+++ b/inc/customizer/custom-controls/responsive/responsive.scss
@@ -44,10 +44,12 @@
   .ast-responsive-select {
     width: 50px;
     margin: 0;
-    display: none;
-    padding: .1em;
     margin-left: 2px;
+	padding: 0 24px 0 8px;
+    font-size: 13px;
+	text-transform: uppercase;
     float: none;
+    display: none;
   }
   .ast-responsive-input.active + .ast-responsive-select {
     display: block;
